ohsome_filter_to_sql/OFLParser.py
# Generated from OFL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OFLParser ( Parser ):

    grammarFileName = "OFL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'='", "'!='", "'('", "')'", "','", 
                     "'..'", "'~'", "'and'", "'or'", "'not'", "'in'", "'*'", 
                     "'type'", "'id'", "'geometry'", "'area'", "'perimeter'", 
                     "'length'", "'geometry.vertices'", "'geometry.outers'", 
                     "'geometry.inners'", "'changeset'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "AND", "OR", "NOT", "IN", "WILDCARD", 
                      "TYPE", "ID", "GEOMETRY", "AREA", "PERIMETER", "LENGTH", 
                      "GEOMETRY_VERTICES", "GEOMETRY_OUTERS", "GEOMETRY_INNERS", 
                      "CHANGESET", "OSMTYPE", "OSMID", "GEOMETRY_TYPE", 
                      "NUMBER", "DECIMAL", "WORD", "QUOTED", "WS" ]

    RULE_root = 0
    RULE_expression = 1
    RULE_tagMatch = 2
    RULE_tagWildcardMatch = 3
    RULE_tagListMatch = 4
    RULE_tagNotMatch = 5
    RULE_tagNotWildcardMatch = 6
    RULE_tagValuePatternMatch = 7
    RULE_typeMatch = 8
    RULE_idMatch = 9
    RULE_typeIdMatch = 10
    RULE_idRangeMatch = 11
    RULE_idListMatch = 12
    RULE_typeIdListMatch = 13
    RULE_geometryMatch = 14
    RULE_areaRangeMatch = 15
    RULE_perimeterRangeMatch = 16
    RULE_lengthRangeMatch = 17
    RULE_geometryVerticesRangeMatch = 18
    RULE_geometryOutersMatch = 19
    RULE_geometryOutersRangeMatch = 20
    RULE_geometryInnersMatch = 21
    RULE_geometryInnersRangeMatch = 22
    RULE_changesetMatch = 23
    RULE_changesetListMatch = 24
    RULE_changesetRangeMatch = 25
    RULE_string = 26
    RULE_valueSubString = 27
    RULE_and = 28
    RULE_or = 29
    RULE_not = 30
    RULE_in = 31
    RULE_eq = 32
    RULE_ne = 33
    RULE_po = 34
    RULE_pc = 35
    RULE_co = 36
    RULE_dd = 37
    RULE_cn = 38
    RULE_tl = 39
    RULE_range_int = 40
    RULE_range_dec = 41

    ruleNames =  [ "root", "expression", "tagMatch", "tagWildcardMatch", 
                   "tagListMatch", "tagNotMatch", "tagNotWildcardMatch", 
                   "tagValuePatternMatch", "typeMatch", "idMatch", "typeIdMatch", 
                   "idRangeMatch", "idListMatch", "typeIdListMatch", "geometryMatch", 
                   "areaRangeMatch", "perimeterRangeMatch", "lengthRangeMatch", 
                   "geometryVerticesRangeMatch", "geometryOutersMatch", 
                   "geometryOutersRangeMatch", "geometryInnersMatch", "geometryInnersRangeMatch", 
                   "changesetMatch", "changesetListMatch", "changesetRangeMatch", 
                   "string", "valueSubString", "and", "or", "not", "in", 
                   "eq", "ne", "po", "pc", "co", "dd", "cn", "tl", "range_int", 
                   "range_dec" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    AND=9
    OR=10
    NOT=11
    IN=12
    WILDCARD=13
    TYPE=14
    ID=15
    GEOMETRY=16
    AREA=17
    PERIMETER=18
    LENGTH=19
    GEOMETRY_VERTICES=20
    GEOMETRY_OUTERS=21
    GEOMETRY_INNERS=22
    CHANGESET=23
    OSMTYPE=24
    OSMID=25
    GEOMETRY_TYPE=26
    NUMBER=27
    DECIMAL=28
    WORD=29
    QUOTED=30
    WS=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(OFLParser.EOF, 0)

        def expression(self):
            return self.getTypedRuleContext(OFLParser.ExpressionContext,0)


        def WILDCARD(self):
            return self.getToken(OFLParser.WILDCARD, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(OFLParser.WS)
            else:
                return self.getToken(OFLParser.WS, i)

        def getRuleIndex(self):
            return OFLParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)




    def root(self):

        localctx = OFLParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 84
                self.match(OFLParser.WS)


            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 9, 10, 11, 12, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 26, 27, 29, 30, 31]:
                self.state = 87
                self.expression(0)
                pass
            elif token in [13]:
                self.state = 88
                self.match(OFLParser.WILDCARD)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 91
                self.match(OFLParser.WS)


            self.state = 94
            self.match(OFLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def po(self):
            return self.getTypedRuleContext(OFLParser.PoContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OFLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(OFLParser.ExpressionContext,i)


        def pc(self):
            return self.getTypedRuleContext(OFLParser.PcContext,0)


        def not_(self):
            return self.getTypedRuleContext(OFLParser.NotContext,0)


        def tagMatch(self):
            return self.getTypedRuleContext(OFLParser.TagMatchContext,0)


        def tagWildcardMatch(self):
            return self.getTypedRuleContext(OFLParser.TagWildcardMatchContext,0)


        def tagNotMatch(self):
            return self.getTypedRuleContext(OFLParser.TagNotMatchContext,0)


        def tagNotWildcardMatch(self):
            return self.getTypedRuleContext(OFLParser.TagNotWildcardMatchContext,0)


        def tagListMatch(self):
            return self.getTypedRuleContext(OFLParser.TagListMatchContext,0)


        def tagValuePatternMatch(self):
            return self.getTypedRuleContext(OFLParser.TagValuePatternMatchContext,0)


        def typeMatch(self):
            return self.getTypedRuleContext(OFLParser.TypeMatchContext,0)


        def idMatch(self):
            return self.getTypedRuleContext(OFLParser.IdMatchContext,0)


        def typeIdMatch(self):
            return self.getTypedRuleContext(OFLParser.TypeIdMatchContext,0)


        def idRangeMatch(self):
            return self.getTypedRuleContext(OFLParser.IdRangeMatchContext,0)


        def idListMatch(self):
            return self.getTypedRuleContext(OFLParser.IdListMatchContext,0)


        def typeIdListMatch(self):
            return self.getTypedRuleContext(OFLParser.TypeIdListMatchContext,0)


        def geometryMatch(self):
            return self.getTypedRuleContext(OFLParser.GeometryMatchContext,0)


        def areaRangeMatch(self):
            return self.getTypedRuleContext(OFLParser.AreaRangeMatchContext,0)


        def perimeterRangeMatch(self):
            return self.getTypedRuleContext(OFLParser.PerimeterRangeMatchContext,0)


        def lengthRangeMatch(self):
            return self.getTypedRuleContext(OFLParser.LengthRangeMatchContext,0)


        def geometryVerticesRangeMatch(self):
            return self.getTypedRuleContext(OFLParser.GeometryVerticesRangeMatchContext,0)


        def geometryOutersMatch(self):
            return self.getTypedRuleContext(OFLParser.GeometryOutersMatchContext,0)


        def geometryOutersRangeMatch(self):
            return self.getTypedRuleContext(OFLParser.GeometryOutersRangeMatchContext,0)


        def geometryInnersMatch(self):
            return self.getTypedRuleContext(OFLParser.GeometryInnersMatchContext,0)


        def geometryInnersRangeMatch(self):
            return self.getTypedRuleContext(OFLParser.GeometryInnersRangeMatchContext,0)


        def changesetMatch(self):
            return self.getTypedRuleContext(OFLParser.ChangesetMatchContext,0)


        def changesetListMatch(self):
            return self.getTypedRuleContext(OFLParser.ChangesetListMatchContext,0)


        def changesetRangeMatch(self):
            return self.getTypedRuleContext(OFLParser.ChangesetRangeMatchContext,0)


        def and_(self):
            return self.getTypedRuleContext(OFLParser.AndContext,0)


        def or_(self):
            return self.getTypedRuleContext(OFLParser.OrContext,0)


        def getRuleIndex(self):
            return OFLParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = OFLParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 97
                self.po()
                self.state = 98
                self.expression(0)
                self.state = 99
                self.pc()
                pass

            elif la_ == 2:
                self.state = 101
                self.not_()
                self.state = 102
                self.expression(27)
                pass

            elif la_ == 3:
                self.state = 104
                self.tagMatch()
                pass

            elif la_ == 4:
                self.state = 105
                self.tagWildcardMatch()
                pass

            elif la_ == 5:
                self.state = 106
                self.tagNotMatch()
                pass

            elif la_ == 6:
                self.state = 107
                self.tagNotWildcardMatch()
                pass

            elif la_ == 7:
                self.state = 108
                self.tagListMatch()
                pass

            elif la_ == 8:
                self.state = 109
                self.tagValuePatternMatch()
                pass

            elif la_ == 9:
                self.state = 110
                self.typeMatch()
                pass

            elif la_ == 10:
                self.state = 111
                self.idMatch()
                pass

            elif la_ == 11:
                self.state = 112
                self.typeIdMatch()
                pass

            elif la_ == 12:
                self.state = 113
                self.idRangeMatch()
                pass

            elif la_ == 13:
                self.state = 114
                self.idListMatch()
                pass

            elif la_ == 14:
                self.state = 115
                self.typeIdListMatch()
                pass

            elif la_ == 15:
                self.state = 116
                self.geometryMatch()
                pass

            elif la_ == 16:
                self.state = 117
                self.areaRangeMatch()
                pass

            elif la_ == 17:
                self.state = 118
                self.perimeterRangeMatch()
                pass

            elif la_ == 18:
                self.state = 119
                self.lengthRangeMatch()
                pass

            elif la_ == 19:
                self.state = 120
                self.geometryVerticesRangeMatch()
                pass

            elif la_ == 20:
                self.state = 121
                self.geometryOutersMatch()
                pass

            elif la_ == 21:
                self.state = 122
                self.geometryOutersRangeMatch()
                pass

            elif la_ == 22:
                self.state = 123
                self.geometryInnersMatch()
                pass

            elif la_ == 23:
                self.state = 124
                self.geometryInnersRangeMatch()
                pass

            elif la_ == 24:
                self.state = 125
                self.changesetMatch()
                pass

            elif la_ == 25:
                self.state = 126
                self.changesetListMatch()
                pass

            elif la_ == 26:
                self.state = 127
                self.changesetRangeMatch()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 140
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 138
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = OFLParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 130
                        if not self.precpred(self._ctx, 26):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 26)")
                        self.state = 131
                        self.and_()
                        self.state = 132
                        self.expression(27)
                        pass

                    elif la_ == 2:
                        localctx = OFLParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 134
                        if not self.precpred(self._ctx, 25):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 25)")
                        self.state = 135
                        self.or_()
                        self.state = 136
                        self.expression(26)
                        pass

             
                self.state = 142
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TagMatchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OFLParser.StringContext)
            else:
                return self.getTypedRuleContext(OFLParser.StringContext,i)


        def eq(self):
            return self.getTypedRuleContext(OFLParser.EqContext,0)


        def getRuleIndex(self):
            return OFLParser.RULE_tagMatch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTagMatch" ):
                listener.enterTagMatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTagMatch" ):
                listener.exitTagMatch(self)




    def tagMatch(self):

        localctx = OFLParser.TagMatchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tagMatch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.string()
            self.state = 144
            self.eq()
            self.state = 145
            self.string()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagWildcardMatchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(OFLParser.StringContext,0)


        def eq(self):
            return self.getTypedRuleContext(OFLParser.EqContext,0)


        def WILDCARD(self):
            return self.getToken(OFLParser.WILDCARD, 0)

        def getRuleIndex(self):
            return OFLParser.RULE_tagWildcardMatch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTagWildcardMatch" ):
                listener.enterTagWildcardMatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTagWildcardMatch" ):
                listener.exitTagWildcardMatch(self)




    def tagWildcardMatch(self):

        localctx = OFLParser.TagWildcardMatchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tagWildcardMatch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.string()
            self.state = 148
            self.eq()
            self.state = 149
            self.match(OFLParser.WILDCARD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagListMatchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OFLParser.StringContext)
            else:
                return self.getTypedRuleContext(OFLParser.StringContext,i)


        def in_(self):
            return self.getTypedRuleContext(OFLParser.InContext,0)


        def po(self):
            return self.getTypedRuleContext(OFLParser.PoContext,0)


        def pc(self):
            return self.getTypedRuleContext(OFLParser.PcContext,0)


        def co(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OFLParser.CoContext)
            else:
                return self.getTypedRuleContext(OFLParser.CoContext,i)


        def getRuleIndex(self):
            return OFLParser.RULE_tagListMatch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTagListMatch" ):
                listener.enterTagListMatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTagListMatch" ):
                listener.exitTagListMatch(self)




    def tagListMatch(self):

        localctx = OFLParser.TagListMatchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tagListMatch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.string()
            self.state = 152
            self.in_()
            self.state = 153
            self.po()
            self.state = 154
            self.string()
            self.state = 160
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 155
                    self.co()
                    self.state = 156
                    self.string() 
                self.state = 162
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 163
            self.pc()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagNotMatchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OFLParser.StringContext)
            else:
                return self.getTypedRuleContext(OFLParser.StringContext,i)


        def ne(self):
            return self.getTypedRuleContext(OFLParser.NeContext,0)


        def getRuleIndex(self):
            return OFLParser.RULE_tagNotMatch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTagNotMatch" ):
                listener.enterTagNotMatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTagNotMatch" ):
                listener.exitTagNotMatch(self)




    def tagNotMatch(self):

        localctx = OFLParser.TagNotMatchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tagNotMatch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.string()
            self.state = 166
            self.ne()
            self.state = 167
            self.string()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagNotWildcardMatchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(OFLParser.StringContext,0)


        def ne(self):
            return self.getTypedRuleContext(OFLParser.NeContext,0)


        def WILDCARD(self):
            return self.getToken(OFLParser.WILDCARD, 0)

        def getRuleIndex(self):
            return OFLParser.RULE_tagNotWildcardMatch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTagNotWildcardMatch" ):
                listener.enterTagNotWildcardMatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTagNotWildcardMatch" ):
                listener.exitTagNotWildcardMatch(self)




    def tagNotWildcardMatch(self):

        localctx = OFLParser.TagNotWildcardMatchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tagNotWildcardMatch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.string()
            self.state = 170
            self.ne()
            self.state = 171
            self.match(OFLParser.WILDCARD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagValuePatternMatchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(OFLParser.StringContext,0)


        def tl(self):
            return self.getTypedRuleContext(OFLParser.TlContext,0)


        def valueSubString(self):
            return self.getTypedRuleContext(OFLParser.ValueSubStringContext,0)


        def getRuleIndex(self):
            return OFLParser.RULE_tagValuePatternMatch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTagValuePatternMatch" ):
                listener.enterTagValuePatternMatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTagValuePatternMatch" ):
                listener.exitTagValuePatternMatch(self)




    def tagValuePatternMatch(self):

        localctx = OFLParser.TagValuePatternMatchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tagValuePatternMatch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.string()
            self.state = 174
            self.tl()
            self.state = 175
            self.valueSubString()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeMatchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(OFLParser.TYPE, 0)

        def cn(self):
            return self.getTypedRuleContext(OFLParser.CnContext,0)


        def OSMTYPE(self):
            return self.getToken(OFLParser.OSMTYPE, 0)

        def getRuleIndex(self):
            return OFLParser.RULE_typeMatch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeMatch" ):
                listener.enterTypeMatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeMatch" ):
                listener.exitTypeMatch(self)




    def typeMatch(self):

        localctx = OFLParser.TypeMatchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_typeMatch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(OFLParser.TYPE)
            self.state = 178
            self.cn()
            self.state = 179
            self.match(OFLParser.OSMTYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdMatchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(OFLParser.ID, 0)

        def cn(self):
            return self.getTypedRuleContext(OFLParser.CnContext,0)


        def NUMBER(self):
            return self.getToken(OFLParser.NUMBER, 0)

        def getRuleIndex(self):
            return OFLParser.RULE_idMatch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdMatch" ):
                listener.enterIdMatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdMatch" ):
                listener.exitIdMatch(self)




    def idMatch(self):

        localctx = OFLParser.IdMatchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_idMatch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(OFLParser.ID)
            self.state = 182
            self.cn()
            self.state = 183
            self.match(OFLParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeIdMatchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(OFLParser.ID, 0)

        def cn(self):
            return self.getTypedRuleContext(OFLParser.CnContext,0)


        def OSMID(self):
            return self.getToken(OFLParser.OSMID, 0)

        def getRuleIndex(self):
            return OFLParser.RULE_typeIdMatch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeIdMatch" ):
                listener.enterTypeIdMatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeIdMatch" ):
                listener.exitTypeIdMatch(self)




    def typeIdMatch(self):

        localctx = OFLParser.TypeIdMatchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_typeIdMatch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.match(OFLParser.ID)
            self.state = 186
            self.cn()
            self.state = 187
            self.match(OFLParser.OSMID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdRangeMatchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(OFLParser.ID, 0)

        def cn(self):
            return self.getTypedRuleContext(OFLParser.CnContext,0)


        def range_int(self):
            return self.getTypedRuleContext(OFLParser.Range_intContext,0)


        def getRuleIndex(self):
            return OFLParser.RULE_idRangeMatch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdRangeMatch" ):
                listener.enterIdRangeMatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdRangeMatch" ):
                listener.exitIdRangeMatch(self)




    def idRangeMatch(self):
